--- a/css/style.css
+++ b/css/style.css
@@ -15,10 +15,12 @@ hr {
     border: none;
     margin: 0;
 }
-.title-desctiption h1 {
+.title-description h1 {
     text-align: center;
     font-size: 26px;
     margin-top: 2rem;
+}
+.title-description {
     display: none;
 }
 .weather {
